updated test and VS2013 solution

--- a/DumpInspector.Test/DumpInspector.Test.csproj
+++ b/DumpInspector.Test/DumpInspector.Test.csproj
@@ -39,7 +39,7 @@
     <StartupObject>DumpInspector.Test.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
