--- a/DumpInspector/DumpInspector.csproj
+++ b/DumpInspector/DumpInspector.csproj
@@ -95,6 +95,7 @@
     </ApplicationDefinition>
     <Compile Include="AdministratorLogin.cs" />
     <Compile Include="CharacterRestrictedTextBox.cs" />
+    <Compile Include="HexByteConverter.cs" />
     <Compile Include="ScannerSettingsWindow.xaml.cs">
       <DependentUpon>ScannerSettingsWindow.xaml</DependentUpon>
     </Compile>
@@ -103,6 +104,7 @@
     <Compile Include="FirmwareScanner.cs" />
     <Compile Include="FirmwareTools.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="UADVersion.cs" />
     <Page Include="ScannerSettingsWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
